folder1/folder2/folder3/objects/Obj789__c.object
<CustomObject>
    <fields>
        <fullName>F1__c</fullName>
        <label>F1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>F2__c</fullName>
        <label>F2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <type>Email</type>
    </fields>
    <label>Obj789</label>
    <nameField>
        <label>Obj789 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Obj789s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>